# aggregate-feeds

./: README.md  container.py  main.py  pyproject.toml
.github/workflows/: static.yml
output/: booru.xml  comic.xml  fediverse.xml  index.html  kemono.xml  kemono2.xml  nitter.xml  twitter.xml
repository/: comic_raindropio.py  fediverse_raindropio.py  githubio.py  nitter_raindropio.py  raindropio.py  twitter_raindropio.py
repository/interface/: feed_urls.py
usecase/: booru_aggregate.py  comic_aggregate.py  fediverse_aggregate.py  kemono_aggregate.py  nitter_aggregate.py  twitter_aggregate.py
usecase/interface/: aggregate_feed.py
